Fix PropertyService compilation and property response mapping